# rc-kr

./: .gitignore  README.md  itemkey_string.csv  secretfile_package_string.csv  secretgeneinfo_string.csv  skill_string.csv  string_string.csv  tutorial_string.csv  tutorialforce_string.csv  tutorialpic_new_string.csv  uiartdocument_string.csv  uiartdocumentplay_string.csv  uibattlelose_string.csv  uibattlemenu_string.csv  uibattlewincj_string.csv  uicgplayer_string.csv  uicollection_string.csv  uidialogrecord_string.csv  uigetkeyitem_string.csv  uiitemprepare_string.csv  uiitemtip_string.csv  uiitemupgrade_string.csv  uimainremake_string.csv  uipreparecompose_string.csv  uipreparemain_string.csv  uiprepareproduct_string.csv  uireinforcechoose_string.csv  uiroleprofile_string.csv  uiscout_string.csv  uisearchlight_string.csv  uisecretdocment_string.csv  uitacticsmode_string.csv  uitacticsrule_string.csv  uitutorial_string.csv  uitutorialopen_string.csv  weaponaccessory_string.csv
decompiler/: .gitignore  README.md  pyproject.toml
transformer/: README.md  pyproject.toml
transformer/csv/: achievement_string.csv  battlemessagebox_string.csv  gamehelp_string.csv  gamesetting_string.csv  item_string.csv  itembuff_string.csv  itemcollection_string.csv  itemkey_string.csv  itemteam_string.csv  keyword_string.csv  levelbrief_string.csv  levelinfo_string.csv  levelmission_string.csv  loadingtips_string.csv  modes_string.csv  playback_string.csv  scoutenemy_string.csv  secretfile_package_string.csv  secretfile_string.csv  skill_string.csv  skillbuff_string.csv  string_string.csv  (+51 more)
(+57 files in other folders)
