[project]
name = "decompiler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yunu7067", email = "yunu7067@gmail.com" }
]
dependencies = [
    "unitypy>=1.21.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"decompiler" = "decompiler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/decompiler"]
